Bugfix spacing. Add finished message

--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,13 @@
-.App {
-    text-align: center;
-    min-height: 100vh;
-    background-color: #424853;
-    color: white;
-    display: flex;
-    flex-direction: column;
+* {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
-.Main {
-    font-size: calc(18px + 2vmin);
-    display: contents;
-}
-
-.Footer {
-    padding-bottom: 30px;
-}
-
-.Toolbar {
-    font-size: calc(10px + 2vmin);
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 30px;
-}
-
-.Toolbar > label {
-    min-width: 100px;
-}
-
-.App-button {
-    width: 180px;
-    height: 45px;
-}
-
-.App-button:not(:last-of-type) {
-    margin-right: 5px;
-}
-
-.Reveal {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
 }
 
 a,
@@ -55,8 +23,6 @@ a:visited {
 ul {
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    padding: 0;
     list-style-type: none;
 }
 
@@ -64,7 +30,55 @@ li {
     display: flex;
     flex-grow: 1;
     min-height: 120px;
-    margin-top: 20px;
+    margin: 10px;
     border: 1px solid grey;
     border-radius: 10px;
+}
+
+.App {
+    text-align: center;
+    min-height: 100vh;
+    background-color: #424853;
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.Main {
+    font-size: calc(18px + 2vmin);
+    display: contents;
+}
+
+.Footer {
+    padding-bottom: 20px;
+}
+
+.Toolbar {
+    font-size: calc(10px + 2vmin);
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
+
+.Toolbar > label {
+    min-width: 100px;
+}
+
+.Toolbar > label > input {
+    margin-left: 5px;
+}
+
+.App-button {
+    width: 180px;
+    height: 45px;
+    background: none;
+    color: white;
+    font: inherit;
+    font-size: medium;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.App-button:not(:last-of-type) {
+    margin-right: 5px;
 }
