--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100%;
 }
 
@@ -10,13 +10,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 20vh;
     padding: 5px;
+    flex-grow: 1;
 }
 
 .Card-Image {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 50vh;
+    justify-items: center;
+    max-height: 440px;
+}
+
+.Card-EmptyImage, .Card-Image > img {
+    height: 100vw;
 }
